--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,12 @@
   box-sizing: inherit;
 }
 
+/* Paleta */
+/* #6ec1e4 */
+/* #fff */
+/* #4B3F72 */
+/* #FFD93D */
+
 :root {
   --font-inter: "Inter", serif;
   --font-gloock: var(--font-inter);
@@ -14,10 +20,14 @@
 body {
   box-sizing: border-box;
   background-color: #feecc7;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 
 .overlay {
@@ -30,5 +40,13 @@ html {
   z-index: 996;
 }
 main {
-  margin-left: 221px;
+  /* background-color: #271d45; */
+  background: linear-gradient(to bottom right, #e0e7ff, #f3e8ff, #fce7f3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 250px;
+  width: calc(100% - 250px);
+  flex: 1;
 }
