5 to 8 steps in form

--- a/frontend/src/app/Components/FormHistoryCreate/FormHistoryCreate.module.css
+++ b/frontend/src/app/Components/FormHistoryCreate/FormHistoryCreate.module.css
@@ -138,3 +138,18 @@
   font-family: "Work Sans", sans-serif;
   color: #6b7280;
 }
+.flexTittleAuthor {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.contadorInput {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+.contadorInput .contador {
+  align-self: flex-end;
+}
