--- a/frontend/src/app/Components/Nav/Nav.module.css
+++ b/frontend/src/app/Components/Nav/Nav.module.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: center;
   padding: 2rem;
-  background-color: #fff;
+  background-color: #4b3f72;
   height: 100vh;
   position: fixed;
   box-shadow: 4px 0 10px rgba(0, 0, 0, 0.2);
