--- a/frontend/src/app/Components/FormHistoryCreate/FormHistoryCreate.module.css
+++ b/frontend/src/app/Components/FormHistoryCreate/FormHistoryCreate.module.css
@@ -11,6 +11,7 @@
   gap: 2.8rem;
   border-radius: 1.5rem;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
+  user-select: none;
 }
 .icon {
   display: flex;
