--- a/frontend/src/app/Components/StoryPage/StoryPage.module.css
+++ b/frontend/src/app/Components/StoryPage/StoryPage.module.css
@@ -1,10 +1,81 @@
 .storyPage {
-  background-color: #fff;
+  background-color: #fefefe;
   padding: 2rem 1.6rem;
   display: flex;
   gap: 2rem;
   width: 100%;
-  background: linear-gradient(to right, #fff 49.5%, #ccc 50%, #fff 50.5%);
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(
+    to right,
+    #fefefe 0%,
+    #fefefe 49.4%,
+    #bbb 49.7%,
+    #666 50%,
+    #bbb 50.3%,
+    #fefefe 50.6%,
+    #fefefe 100%
+  );
+  /* fino 
+  
+  background-image: linear-gradient(
+      to right,
+      #fefefe 0%,
+      #fefefe 49%,
+      #bbb 49.5%,
+      #666 50%,
+      #bbb 50.5%,
+      #fefefe 51%,
+      #fefefe 100%
+    ),
+    url("https://www.transparenttextures.com/patterns/paper-fibers.png"); */
+  background-image: linear-gradient(
+      to right,
+      #fefefe 0%,
+      #fefefe 48.8%,
+
+      #ddd 49.2%,
+      #c0c0c0 49.7%,
+      rgb(119, 119, 119) 49.9%,
+      #c0c0c0 50.1%,
+      #ddd 50.6%,
+
+      #fefefe 51.2%,
+      #fefefe 100%
+    ),
+    url("https://www.transparenttextures.com/patterns/paper-fibers.png");
+
+  background-blend-mode: overlay;
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+
   border: 1px solid hsla(0, 0%, 73%, 0.7);
+  background-size: cover;
+}
+
+.textContainer {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 500px;
+}
+
+.text {
+  padding: 0rem 0rem 0rem 4rem;
+  font-family: var(--font-comic-neue);
+  font-size: 4.2rem;
+  color: #212529;
+  line-height: 200%;
+}
+
+.text::first-letter {
+  font-family: var(--font-mountains);
+  font-size: 6rem;
+  color: #564983;
+}
+
+.imageContainer {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
 }
