--- a/frontend/src/app/Components/StoryPage/StoryPage.module.css
+++ b/frontend/src/app/Components/StoryPage/StoryPage.module.css
@@ -1,4 +1,5 @@
 .storyPage {
+  position: relative;
   background-color: #fefefe;
   padding: 2rem 1.6rem;
   display: flex;
@@ -78,4 +79,36 @@
   justify-content: center;
   align-items: center;
   height: 500px;
+}
+.editButton {
+  position: absolute;
+  left: 98%;
+  top: 96%;
+  transform: translate(-100%, -100%);
+  border: none;
+  display: flex;
+  padding: 12px 24px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 8px;
+  background: #564983;
+  color: #fff;
+  font-size: 2rem;
+  cursor: pointer;
+}
+.readyButton {
+  position: absolute;
+  left: 98%;
+  top: 96%;
+  transform: translate(-100%, -100%);
+  border: none;
+  display: flex;
+  padding: 12px 24px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 8px;
+  background: #ffd93d;
+  color: #564983;
+  font-size: 2rem;
+  cursor: pointer;
 }
